--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,6 +3,8 @@
         <app-menu></app-menu>
     </div>
     <div class="cards">
-
+        <app-card></app-card>
+        <app-card></app-card>
+        <app-card></app-card>
     </div>
 </div>
